<?xml version="1.0"?>
<package format="2">
  <name>jetson_gpio</name>
  <version>1.0.0</version>
  <description>Control GPIO pins on Raspberry Pi, Nvidia Jetson, and other Linux devices with GPIO pins</description>

  <maintainer email="lescutfpr@gmail.com">lesc</maintainer>
  <license>None</license>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
